Adds migration for older versions